--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
   </head>
   <body>
     <!-- Your code here -->
-  </body>
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Lion Yawning">
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Lion Yawning" title="The lion is tired">  
+</body>
 </html>
